# bebop-lang

./: Cargo.toml  README.md  prelude.bop
src/: lib.rs  main.rs
src/lisp/: builtin.rs  env.rs  eval.rs  mod.rs  parser.rs
src/markdown/: html.rs  lisp.rs  mod.rs  parser.rs
