[package]
name = "bebop"
version = "0.1.0"
edition = "2021"
description = "LISP based Markdown preprocessor for creating html documents!"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
nom = "7.1.3"
nombytes = "0.1.1"
