[package]
name = "bebop-lang"
version = "0.1.7"
edition = "2021"
description = "LISP based Markdown preprocessor for creating html documents!"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
rustyline = "13.0.0"
